--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-swiper": "^1.5.13",
-    "react-navigation": "^2.0.2"
+    "react-navigation": "^2.0.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   }
 }
